[gd_scene load_steps=2 format=3 uid="uid://b385726t5548h"]

[ext_resource type="Script" uid="uid://dfju81mt716kh" path="res://Scripts/CraftingMenu.gd" id="1_6ctch"]

[node name="CraftingMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6ctch")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.75

[node name="ForgeGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 3

[node name="Button0" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Button1" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Button4" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Button5" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Button6" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Button7" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Button8" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/ForgeGrid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="PortraitContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PortraitPanel" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/PortraitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CraftButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/PortraitContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "制造"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Gap" type="PanelContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
